--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "check-env": "^1.3.0",
     "cognito-express": "^2.0.14",
     "cors": "^2.8.5",
+    "db-migrate": "^0.11.5",
+    "db-migrate-pg": "^0.5.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "loglevel": "^1.6.1",
