--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "loglevel": "^1.6.1",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "sequelize": "^5.1.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^5.15.1",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.16.0"
+    "eslint-plugin-import": "^2.16.0",
+    "mocha": "^6.0.2",
+    "supertest": "^4.0.0"
   },
   "scripts": {
     "start-dev": "echo \"Starting with nodemon..\" && nodemon index.js",
     "pretest": "eslint --ignore-path .eslintignore .",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha 'tests/**/*.js' --exit",
     "start": "echo \"Starting server..\" && node index.js",
     "prestart": "node checkenv.js"
   },
