--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "check-env": "^1.3.0",
-    "cognito-express": "^2.0.14",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.5",
     "db-migrate-pg": "^0.5.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "express-jwt-authz": "^2.2.0",
+    "jwks-rsa": "^1.4.0",
     "loglevel": "^1.6.1",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "sequelize": "^5.1.0"
   },
